Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35757

QSplashScreen: On Linux the splashscreen is not always visible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.2
    • 5.2.0
    • GUI: Window management
    • None
    • Linux (Ubuntu 13.10)
    • bcfacd4b6f35dfd00f0f04d562f345bbc98cec13

    Description

      With the following example, the QSplashScreen is visible but only as a transparent window, it does not appear at all.

      #include <QtWidgets>
      
      int main(int argc, char **argv)
      {
      QApplication a(argc, argv);
      QMainWindow mw;
      QPixmap pix(200, 200);
      pix.fill(Qt::red);
      QPainter p(&pix);
      p.setBrush(Qt::blue);
      p.drawRect(20,20,50,50);
      p.end();
      QSplashScreen splash(pix); //, Qt::WindowStaysOnTopHint);
      splash.show();
      a.processEvents();
      splash.raise();
      splash.finish(&mw);
      a.processEvents();
      QTimer::singleShot(5000, &mw, SLOT(show()));
      return a.exec();
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes